Email Footer Update

--- a/about.html
+++ b/about.html
@@ -258,7 +258,7 @@
             	<h2 class="ftco-heading-2">Contact information</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><a href="mailto:MaishibeCConstruction@gmail.com"><span class="icon fa fa-mail"></span><span class="text">MaishibeCConstruction@gmail.com</span></a></li>
+	                <li><a href="mailto:MaishibeCConstruction@gmail.com"><span class="text">MaishibeCConstruction@gmail.com</span></a></li>
 	                <li><a href="https://wa.me/27620016616"><span class="text">+27 62 001 6616</span></a></li>
 	                <li><span class="text">80 Zambezi Manor Life Estate, Roodeplaat, Pretoria</span></li>
 	              </ul>
